# Transport_Problem

./: README.md  pyproject.toml
src/transport/: run.py
src/transport/context/: __init__.py  model_data.py
src/transport/context/objects/: __init__.py  client.py  route.py  validation_utils.py  workshop.py
src/transport/engine/: __init__.py  engine.py  result.py
src/transport/engine/engines/: __init__.py  abstract_engine.py  engine_hexaly.py  engine_pyomo.py
src/transport/factory/: __init__.py  model_data_converter.py  model_data_factory.py  types.py
test/: test_engine.py  test_factory_and_model_data.py  test_model_data_validation.py
test/data/: test_data_and_data_factory.json
test/data/test_engine/: test_engine_constr_client_demand.json  test_engine_constr_client_demand_multiple_routes.json  test_engine_constr_client_demand_multiple_workshops.json  test_engine_constr_client_demand_multiple_workshops_and_routes.json  test_engine_constr_min_transport_quantity.json  test_engine_constr_route_capacity.json  test_engine_constr_workshop_capacity.json  test_engine_objective.json
test/data/test_model_data/: test_data_and_data_factory.json
test/data/test_model_data_validation/: test_model_data_validation_client.json  test_model_data_validation_route.json  test_model_data_validation_workshop.json
