[project]
name = "transportproblem"
version = "0.1.0"
description = "Transport Problem"
requires-python = "==3.11.13"

dependencies = [
    "pandas>=2.3.3",
    "pydantic>=2.12.2",
    "pyomo>=6.9.4",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transport"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
